<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.frankson.zikapp.DengueInfo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informa_es_importantes"
                android:textColor="@color/verde_legal"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                android:paddingTop="4dp"/>

            <TextView
                android:id="@+id/dengue_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dengue_info"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingStart="12dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="4dp"/>

            <TextView
                android:id="@+id/title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sintomas"
                android:textColor="@color/verde_legal"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/dengue_sintomas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dengue_sintomas"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingStart="12dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="4dp"/>

            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tratamento"
                android:textColor="@color/verde_legal"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/dengue_tratamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dengue_tratamento"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:paddingStart="12dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="4dp"/>


        </LinearLayout>
    </ScrollView>

    <!--tools:layout_editor_absoluteX="16dp"-->
    <!--tools:layout_editor_absoluteY="16dp"-->

</RelativeLayout>
